@@ -196,3 +196,4 @@ bw_backup=1
 hashpass=0
 maillog_hide=0
 own_restore=0
+sni_support=0
