@@ -1824,6 +1824,7 @@ check_ehomebase=The home base directory $1 is not an absolute path. This can be 
 check_ehomebase=The home base directory $1 is not an absolute path. This can be corrected on the <a href='$2'>Users and Groups module configuration</a> page.
 check_ehomeformat=The home directory format $1 does not contain the username or domain name. This can be corrected on the <a href='$2'>Virtualmin configuration</a> page.
 check_ehomestyle=The home directory style is set to "Just base directory", which is unusable with Virtualmin. This can be corrected on the <a href='$2'>Users and Groups module configuration</a> page.
+check_esni=Multiple SSL websites on the same IP address have been enabled on the <a href='$1'>Virtualmin Configuration</a> page, but your web server does not support this feature.
 
 checkmap_enone=No map sources were found in the <a href='$1'>Postfix configuration</a>
 checkmap_esupport=The map source <tt>$1</tt> is not supported by Postfix - you may need to install Postfix libraries for it, or re-compile
