@@ -1325,3 +1325,4 @@ The post-installation wizard now prompts for you to select a MySQL configuration
 Updated the phpMyAdmin script installer to version 3.4.9, Drupal to 7.10, Moodle to 2.2, WordPress to 3.3, RoundCube to 0.7, SugarCRM to 6.3.1, SMF to 2.0.2, FosWiki to 1.1.4, and MoinMoin to 1.8.9.
 The script installer update process can now detect new installer releases that don't change the application version.
 Added the modify-proxy API command, to update an existing proxy balancer.
+The warning when multiple SSL sites share the same IP can now be disabled if your webserver supports SNI, via a new option on the Virtualmin Configuration page.
